--- a/index.html
+++ b/index.html
@@ -5,6 +5,36 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <body>
+
+    <div class="mainContainer">
+        <div class="leftSection">
+            <div class="item">
+                Item 1
+            </div>
+            <div class="item">
+                Item 2
+            </div>
+            <div class="item">
+                Item 3
+            </div>
+        </div>
+        <div class="rightSection">
+            <div class="item">
+                Item 1
+            </div>
+            <div class="item">
+                Item 2
+            </div>
+            <div class="item">
+                Item 3
+            </div>
+            <div class="item">
+                Item 4
+            </div>
+        </div>
+    </div>
+
+
     <div class="container">
             <div class="top-nav"></div>
                 <div class="side-nav"></div>
